fix long words breaking card spacing

--- a/search-extensibility-samples/src/libraries/CustomComponent.css
+++ b/search-extensibility-samples/src/libraries/CustomComponent.css
@@ -84,6 +84,7 @@
     display: -webkit-box;
     -webkit-line-clamp: 5;
     -webkit-box-orient: vertical;
+    word-break: break-word;
 }
 
 .contact {
